# Netcast

./: .env.example  .gitignore  .vercelignore  NetCast  Link Search — Technical Ov.txt  README.md  Social Media Data Collection - TTI Sample - Sheet3.csv  out_cse.csv  out_demo.csv  package-lock.json  package.json  pyproject.toml  sample_input.csv  vercel.json
frontend/: .env.local.example  README.md  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/search/: route.ts
frontend/src/app/search/: page.tsx
frontend/src/components/: CoverageVisual.tsx  DiscoveryOceanLoader.tsx  SiteTopBar.tsx
frontend/src/lib/: aliases.ts  canonicalUrl.ts  classification.ts  coveragePrediction.ts  env.ts  evidence.ts  formatError.ts  groq.ts  parseCsv.ts  pipeline.ts  platformFilter.ts  scoring.ts  siteConfig.ts  types.ts
scripts/: tiktok_playwright_debug.py
src/linksearch/: __init__.py  __main__.py  adapter_retry.py  aliases.py  brave_social.py  canonical_url.py  classification.py  cli.py  config.py  coverage_prediction.py  crawl4ai_merge.py  csv_io.py  evidence_fetch.py  explain_results.py  groq_helper.py  models.py  observability.py  ocr_thumb.py  orchestration.py  pipeline.py  platform_filter.py  runtime_geo.py  scoring.py  scoring_evidence.py  seed_expand.py  seed_expand_v3.py  tiktok_direct_stdio.py
tests/: test_adapter_retry_obs.py  test_aliases.py  test_classification.py  test_csv_io.py  test_google_cse_queries.py  test_platform_filter.py  test_scoring.py
web/: cse_embed.html
